--- a/docs/paper/paper.Rmd
+++ b/docs/paper/paper.Rmd
@@ -209,13 +209,25 @@ global_models <- locations_per_model |>
 
 # Partial coverage models
 partial_models <- locations_per_model |>
-  DT(n > 1) |>
+  DT(n > 2) |>
   DT(n <= 30)
+
+#Varying submissions
+varying_submissions <- locs_per_model_date |>
+  DT(partial_models[, .(model)], on = "model")
 
 # Models coverage of forecast datees
 forecast_dates_by_models <- metadata |>
   summarise_forecasts_by(var = "target_end_date", by = "model") |>
-  DT(order(n))
+  DT(order(n)) |>
+  DT(, n_per := n / forecast_dates) |>
+  DT(, type := fcase(
+      model %in% global_models, "global",
+      model %in% local_models, "local",
+      model %in% partial_models[, model], "partial",
+      default = "other"
+    )
+  )
 ```
 
 ## Model {-}
@@ -331,14 +343,16 @@ The code for the forecating model defined above along with the infrastructure re
 
 ## Data summary {-}
 
-We extracted forecasts starting from the 15th of January until the 19th of July 2022 for all countries covered by the ECDC forecasting hub (all ECDC nations and the UK making `r locations` unique locations). In total `r nrow(metadata)` forecasts were made across all locations, `r forecast_dates` forecast dates from `r models` independent forecast models (including the ECDC baseline model). Of these models, `r length(global_models)` forecasted in at least 30 locations including our original submission  (referred to as "epiforecasts-EpiNow2" by the hub), and our surrogate model (referred to as "epiforecasts-weeklygrowth" by the hub). Of the remainining models submitted `r length(local_models)` were submitted in only one location. These models were gernerally submitted to a subset of locations with particular clustering in Germany and Poland (likely due to the folding of the German/Poland forecasting hub into the ECDC forecasting hub project). Italy was also an outlier with `r single_locs_models_per_loc[location == "IT", n]` models that submitted nowhere else. `r length(partial_models)` models submitted for between 2 and 30 locations likely indicating manual curation of submissions.
+- Incidence in the ECDC
+  - Omicron variant
+  - BA.1 and BA.2 variant
+  - Differences across countries and timings
+  - NPIs across countries
+  - testing across countries
 
-Across all forecast dates and locations the minimum number of independent forecasts was `r models_per_loc_date[, min(n)]` with the maxmimum being `r models_per_loc_date[, max(n)]`. The median number of independent forecasts per location and forecast date was `r models_per_loc_date[, median(n)]`. Across all forecast dates all locations recieved forecasts from at least `r models_per_location[, min(n)]` models with the median number of forecast models per location being `r models_per_location[, median(n)]`.
+We extracted forecasts starting from the 15th of January until the 19th of July 2022 for all countries covered by the ECDC forecasting hub (all ECDC nations and the UK making `r locations` unique locations). In total `r nrow(metadata)` forecasts were made across all locations, `r forecast_dates` forecast dates from `r models` independent forecast models (including the ECDC baseline model). Of these models, `r length(global_models)` forecasted in at least 30 locations including our original submission  (referred to as "epiforecasts-EpiNow2" by the hub), and our surrogate model (referred to as "epiforecasts-weeklygrowth" by the hub). Of the remaining models submitted `r length(local_models)` were submitted in only one location. These models were gernerally submitted to a subset of locations with particular clustering in Germany and Poland (likely due to the folding of the German/Poland forecasting hub into the ECDC forecasting hub project). Italy was also an outlier with `r single_locs_models_per_loc[location == "IT", n]` models that submitted nowhere else. `r length(partial_models)` models submitted for between 3 and 30 locations and all these models varied the number of locations they submitted forecasts for over time, potentially indicating manual curation or models targted at specific conditions.
 
-- Date range of forecasts
-- Forecasts per country
-- Total number of forecast models and average per location and per forecast date
-- Summarises general trends in incidence in the data
+Across all forecast dates and locations the minimum number of independent forecasts was `r models_per_loc_date[, min(n)]` with the maxmimum being `r models_per_loc_date[, max(n)]`. The median number of independent forecasts per location and forecast date was `r models_per_loc_date[, median(n)]`. All locations recieved forecasts from at least `r models_per_location[, min(n)]` models with the median number of forecast models per location being `r models_per_location[, median(n)]`. Coverage of forecast dates varied across submitted models with `r forecast_dates_by_models[n_per == 1, .N]` models submitting for all dates, `r forecast_dates_by_models[n_per >= 0.9, .N]` models submitting for at least 90% of dates, and `r forecast_dates_by_models[n_per < 0.50, .N]` models submitting for fewer than 50% of forecast dates. In general, there was no clear difference in forecast date coverage between models that submitted for all locations vs a small subset but models with partial coverage of locations all also had partial coverage of forecast dates.
 
 ## Forecast evaluation
 
