add incidence rate discussion across ECDC/UK

--- a/docs/paper/paper.Rmd
+++ b/docs/paper/paper.Rmd
@@ -343,12 +343,7 @@ The code for the forecating model defined above along with the infrastructure re
 
 ## Data summary {-}
 
-- Incidence in the ECDC
-  - Omicron variant
-  - BA.1 and BA.2 variant
-  - Differences across countries and timings
-  - NPIs across countries
-  - testing across countries
+In our study period, incidence rates across ECDC nations and in the UK were primary driven by the spread of noval subvariants of concern related to the Omicron variant. Many nations, such as the UK saw large BA.1 waves in early January to late January that then resulted in declining incidence rates through Febuary. From late Febuary, througth to the end of May, most nations then saw another wave, typically with lower reported incidence rates, driven by BA.2. This wave was typically characterised by a lower peak than the BA.1 wave but a longer tail. The end of our study period was characterised by the gradual take-over of the BA.4/BA.5 subvariants that again had a lower peak and lower absolute growth rates. Unlike earlier periods in the pandemic, our study period did not see the use of new non-pharmaceutical interventions (NPIs) in response to increasing COVID-19 incidence in most locations. In addition, in general ascertainment rates likely reduced over time in most locations due to reductions in routine testing, and reductions in test availability. Whilst both the reduced use of NPIs and testing generally occured across nations our study period also marked an increase in the heterogenity of the response to COVID-19 pandemic with nations changing policy at different times and to different degrees. This is in contrast to the early COVID-19 pandemic response for which most nations took similar actions at similar times.
 
 We extracted forecasts starting from the 15th of January until the 19th of July 2022 for all countries covered by the ECDC forecasting hub (all ECDC nations and the UK making `r locations` unique locations). In total `r nrow(metadata)` forecasts were made across all locations, `r forecast_dates` forecast dates from `r models` independent forecast models (including the ECDC baseline model). Of these models, `r length(global_models)` forecasted in at least 30 locations including our original submission  (referred to as "epiforecasts-EpiNow2" by the hub), and our surrogate model (referred to as "epiforecasts-weeklygrowth" by the hub). Of the remaining models submitted `r length(local_models)` were submitted in only one location. These models were gernerally submitted to a subset of locations with particular clustering in Germany and Poland (likely due to the folding of the German/Poland forecasting hub into the ECDC forecasting hub project). Italy was also an outlier with `r single_locs_models_per_loc[location == "IT", n]` models that submitted nowhere else. `r length(partial_models)` models submitted for between 3 and 30 locations and all these models varied the number of locations they submitted forecasts for over time, potentially indicating manual curation or models targted at specific conditions.
 
